Fixed hamburger button on mobile

--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -35,23 +35,23 @@
 .hamburger-button {
   position: fixed;
   z-index: 10;
-  top: 15px;
-  right: 15px;
+  top: 1.5rem;
+  right: 1.5rem;
   display: none;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  gap: 5px;
-  width: 4rem;
-  height: 4rem;
+  justify-content: space-around;
+  width: 5rem;
+  height: 5rem;
+  padding: 0.9rem;
 }
 .hamburger-button:active {
   background-color: rgba(127, 145, 98, 0.8);
 }
 
 .hamburger-button span {
-  width: 90%;
-  height: 3px;
+  width: 100%;
+  height: 0.4rem;
   border-radius: 100px;
   background-color: rgb(24, 37, 23);
 }
